--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+              "node_modules/ngx-spinner/animations/ball-spin-clockwise.css",
+              "src/styles.css"
+              
             ],
             "scripts": [],
             "server": "src/main.server.ts",
