--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "ngx-spinner": "^16.0.2",
