--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "node_modules/ngx-spinner/animations/ball-spin-clockwise.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@nebular/theme/styles/prebuilt/default.css"
               
             ],
             "scripts": [],
