--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.8",
+    "@angular/animations": "^17.1.1",
+    "@angular/cdk": "^17.1.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
+    "@angular/core": "^17.1.1",
     "@angular/forms": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
+    "@nebular/eva-icons": "^13.0.0",
+    "@nebular/theme": "^13.0.0",
     "date-fns": "^3.3.1",
+    "eva-icons": "^1.1.3",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "ngx-spinner": "^16.0.2",
@@ -34,6 +38,7 @@
     "@angular-devkit/build-angular": "^17.0.7",
     "@angular/cli": "^17.0.7",
     "@angular/compiler-cli": "^17.0.0",
+    "@schematics/angular": "^17.0.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
