--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,8 @@
             "styles": [
               "node_modules/ngx-spinner/animations/ball-spin-clockwise.css",
               "src/styles.css",
-              "node_modules/@nebular/theme/styles/prebuilt/default.css"
-              
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
