--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
-    "@nebular/eva-icons": "^13.0.0",
-    "@nebular/theme": "^13.0.0",
     "date-fns": "^3.3.1",
     "eva-icons": "^1.1.3",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^18.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.13.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
